--- a/view/templates/ItCube/index.html
+++ b/view/templates/ItCube/index.html
@@ -10,18 +10,28 @@
 	</head>
 	
 	<body>
-		<header>
-			<div class='right sc'><a href='{% url "login" %}'>Вход/Выход</a></div>
-			
-		</header>
+		
 		<nav>
 			<table>
 				<tr>
-					<td><p><div class='center fc'><a href='{% url "index" 1 %}'>Главная</a></div></p></td>
-					</tr><tr>
+					{% if conf == 'adds' %}
+						<td><p><div class='center fc'><a href='{% url "index" 1 %}'>На главную</a></div></p></td>
+						</tr><tr>
+					{% else %}
+						<td><p><div class='center fc'><a href='{% url "index" 1 %}'>На первую</a></div></p></td>
+						</tr><tr>
+					{% endif %}
 					<td><p><div class='center sc'><a href='{% url "add" %}'>Добавить</a></div></p></td>
 					</tr><tr>
+						<form action="{% url  'search_results' %}" method="get">
+						  <input class='inp sm' name="q" type="text" placeholder="Поиск...">
+						</form>
+					</tr><tr>
+					{% if conf == 'adds' %}
+					<td><p><div class='center fc'>Страница: Добавление</div></p></td>
+					{% else %}
 					<td><p><div class='center fc'>Страница: {{pp}}</div></p></td>
+					{% endif %}
 				</tr>
 			</table> 
 			
@@ -41,11 +51,19 @@
 					<td class='img'>
 					<div></div><img src='{% static "img/icon.png" %}'></td>
 					<td class='fc text'>
-					
+					{% if pp %}
+					{{cont}}
 					<h1>{{cont.Name}}</h1>
-					<h3>Родился: {{c.YearsOne}}</h3><h3>Умер: {{cont.YearsTwo}}</h3>
+					<h3>Родился: {{cont.YearsOne}}</h3><h3>Умер: {{cont.YearsTwo}}</h3>
 					<h4>Место призыва: {{cont.Place}}</h4>
-					
+					{% else %}
+						<p>das</p>
+						{% for cont in object_list %}
+							<h1>{{cont.Name}}</h1>
+							<h3>Родился: {{cont.YearsOne}}</h3><h3>Умер: {{cont.YearsTwo}}</h3>
+							<h4>Место призыва: {{cont.Place}}</h4>
+						{% endfor %}
+					{% endif %}
 					</td>
 				</tr>
 				
@@ -55,9 +73,9 @@
 				
 					{% for b in but %}
 					{% if pp > b %}
-					<td class='l'><div class='center'><a href='{% url "index" b %}'>&#9664;</a></div></td>
+					<td class='l'><div class='center'><a href='{% url "index" b %}'><img  width='45%' src='{% static "img/left_arr.PNG"  %}'/></a></div></td>
 					{% else %}
-					<td class='r'><div class='center'><a href='{% url "index" b %}'>&#9654;</a></div></td>
+					<td class='r'><div class='center'><a href='{% url "index" b %}'><img  width='45%' src='{% static "img/right_arr.PNG"  %}'/></a></div></td>
 					{% endif %}
 					{% endfor %}
 				
@@ -83,6 +101,11 @@
 		header div{font-size: 150%; width: 11%; margin-left: 80%}
 		header .right{text-align:right}
 		
+		.inp{font-family: Sorce; font-size: 150%; background:rgba(150, 50, 0, 0.3); border:   5px solid gray; border-radius: 10px}
+		.inp:hover{background: gray;  transition: .3s ease-in-out}
+		.sm{width: 60%}
+		form p{font-size: 150%}
+		
 		nav{position: absolute; width: 13%}
 		nav table{width: 100%}
 		nav div{font-size: 150%; background: rgba(150, 50, 0, 0.6)}
@@ -94,16 +117,21 @@
 		nav .curr{background: #fbb03b; border-radius: 10px}
 		.down{background: #aba0ab}
 		
-		.body table{width: 80%; height: 500px; margin-left: 15%}
-		.body .scr{ height: 500px}
+		
+		.body table{width: 80%; height: 500px; margin-left: 15%; margin-top:2%}
+		{% if pp %}
+		.body .scr{ height: 500px; }
+		{% else %}
+		.body .scr{ height: 500px; overflow-y: scroll}
+		{% endif %}
 		.body table td{text-align: justify;  border: 7px solid rgb(166, 88, 10);border-radius: 20px; }
 		.body .img{width: 20%; border-radius: 0 -10px -10px 0}
 		.body .img div{height: 550px; width: 32%; border: 5px solid #363636; background: rgba(165, 165, 165, 0.5); position: absolute; z-index: -1;margin-left:-3%;border-radius: 20px; top: 3%}
 		.body .dd tr{background:rgba(150, 50, 0, 0.6); border-radius: 10px;}
 		.body form{background: rgba(150, 50, 0, 0.6); border: 5px solid #363636; border-radius: 20px; margin-left: 15%}
 		.body .nav td{text-align: center; position: absolute;  top: 60%; border-radius: 50px}
-		.body .nav .l{left: 16%}
-		.body .nav .r{right: 6%}
+		.body .nav .l{left: 16%; width: 4%}
+		.body .nav .r{right: 6%; width: 4%}
 		.body .nav td:hover{background: rgba(155, 73, 13, 1); transition: .3s ease-in-out}
 		.body .nav .curr{background:#e3a539}
 		.body .nav{height: 20px;  bottom: 0px; width: 70%; background: rgba(0,0,0,0); font-size: 150%}
